--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/bootstrap-grid.rtl.min.css">
+    <link rel="stylesheet" href="css/siwper.css">
+    <link rel="stylesheet" href="css/index.css">
+    <title>صحفه اصلی</title>
 </head>
 <body>
-    
+    سلام ایا این فونت است؟
 </body>
 </html>
