تنظیمات اولیه سکشن هدر

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,77 @@
     <link rel="stylesheet" href="css/bootstrap-grid.rtl.min.css">
     <link rel="stylesheet" href="css/siwper.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/responsive-index.css">
     <title>صحفه اصلی</title>
 </head>
+
 <body>
-    سلام ایا این فونت است؟
+
+    <section class="wrapper-continer-primri">
+
+        <div class="wrapper-contact-main">
+            <div class="title-main d-flex">
+                <figure class="k-smal-head">
+                    <img src="img/K-small-header-index.png" alt="">
+                </figure>
+                <div class="title-main-txt ">
+                    <h1 class="title-primir">
+                        آی وحید
+                        <span>لذت تفاوت</span>
+                    </h1>
+                    <span class="sub-title-primir"> &#174; ivahid Enjoy the difference</span>
+                </div>
+
+            </div>
+            <nav class="nav-head">
+                <ul>
+                    <li><a href="#">
+                            <i class="icon-home"></i>
+                            صفحه نخست
+                        </a></li>
+                    <li><a href="#">
+                            <i class="icon-star-menu"></i>
+                            برند ها
+                        </a></li>
+                    <li><a href="#">
+                            <i class="icon-magalat-menu"></i>
+                            مقالات
+                        </a></li>
+                    <li><a href="#">
+                            <i class="icon-shop"></i>
+                            فروشگاه اینترنتی
+                        </a></li>
+                    <li><a href="#">
+                            <i class="icon-hamkari"></i>
+
+                            همکاری با ما
+                        </a></li>
+                    <li><a href="#">
+                            <i class="icon-phone"></i>
+                            ارتباط با
+                        </a></li>
+                </ul>
+            </nav>
+            <p class="txt-haed">
+                کارنو اندیشان ماد در سطح کشور ارائه خدمات و تــوزیع کالا با بالاترین استانداردهای
+                ارسال در سطح کشور، رصد و نیازسنجی بازار در سطح ملی با توجـه به تفاوت فرهنـگی
+                و اجتماعی مشاوره به همکاران درسطح ملی کارنو اندیشان ماد در سطـح کشــور ارائه
+                خدمات و تــوزیع کالا با بالاترین با توجـه به تفاوت فرهنـگی و اجتـماعی مشـاوره به
+                همکاران درسطح ملی جهت فروش و تولید بهتر محصولات ...
+            </p>
+            <div class="">
+                <a href="#" class="more-btn">
+                    مشاهده بیشتر
+                    <i class="icon-float-arrow-left"></i>
+                </a>
+            </div>
+        </div>
+        <figure class="main-pci">
+            <img src="img/girl-big-index.png" alt="">
+        </figure>
+
+    </section>
+
 </body>
+
 </html>
